--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
    "name": "vast-maxmind",
-   "version": "0.0.1",
+   "version": "0.0.2",
    "main": "index",
-   "description": "Looks up an IP asynchronously using the maxmind database",
+   "description": "Looks up an IP asynchronously using the maxmind database.  Be sure to install maxmind C API first and test from the command line.  http://www.maxmind.com/app/c",
    "keywords": [
        "vastjs",
        "maxmind",
