Added proper ipnum translation from ip string for lookup.  modified test to allow time for the underlying api to be ready.  need to research if it is possible to check a ready flag in maxmind api

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "install": "node-waf configure build",
     "test": "node /tests/lookup.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "optimist": "*"
+    },
   "devDependencies": {},
   "optionalDependencies": {},
   "homepage": "http://vastdevblog.vast.com/"
