--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vast-maxmind",
-   "version": "0.0.8",
+   "version": "0.1.0",
    "main": "index",
    "description": "Looks up an IP asynchronously using the maxmind database.  Be sure to install maxmind C API first and test from the command line.  http://www.maxmind.com/app/c",
    "keywords": [
@@ -28,12 +28,15 @@
   },
   "scripts": {
     "install": "node-waf configure build",
-    "test": "node /tests/lookup.js"
+    "test": "node tests/lookup.js"
   },
   "dependencies": {
-    "optimist": "*"
     },
-  "devDependencies": {},
+  "devDependencies": {
+    "optimist": "*",
+    "tap": "*",
+    "lodash": "*"
+    },
   "optionalDependencies": {},
   "homepage": "http://vastdevblog.vast.com/"
 }
