--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "node": ">=0.6.0"
   },
   "scripts": {
-    "install": "node-waf configure build",
+    "install": "node-gyp configure build",
     "test": "node tests/lookup.js"
   },
   "dependencies": {
